# wall-e

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  WALLE_tune_Oct4.tooth  manifest.xml  manifest.xml~  oldCMakeLists.txt  package.xml  package.xml~
arduino/: mixed_teleop_keyboard.ino  ros_mixed.ino
arduino/WALL-E/PacketSerial/: PacketSerial.ino
arduino/WALL-E/SimpleSerial/: SimpleSerial.ino
arduino/WALL-E/facialExpressions/: facialExpressions.ino
arduino/WALL-E/megaMultSerialtest/: megaMultSerialtest.ino
arduino/WALL-E/mixedDriveandExpressions/: mixedDriveandExpressions.ino
arduino/mixed_teleop_keyboard/: mixed_teleop_keyboard.ino
arduino/ros_mixed/: ros_mixed.ino
arduino/tune_servo_pos/: tuneServoPos.ino
launch/: walle.launch
msg/: HRI.msg  gestures.msg  pointerpos.msg
msg_gen/lisp/: HRI.lisp  _package.lisp  _package_HRI.lisp  _package_gestures.lisp  _package_pointerpos.lisp  gestures.lisp  pointerpos.lisp  walle-msg.asd
scripts/: audioplayer.py  basic_drive.py  centerfinger.py  comtest.py  driveArduino.py  emotion_dummy.py  emotions.py  facedetection.py  move.py  publishdummy.py  roboclaw_example.py  rospy  serialtest.py  sound.py  test_drive.py  viewer.py  visualizer.py
scripts/misc/: cvconverter.py
scripts/servodrive scripts/: basic_drive_ubuntu.py  roboclaw.py  roboclaw_example.py
src/: detectpeople.cpp  image_converter.cpp
src/PointViewer/: main.cpp
src/SceneAnalysis/: SceneDrawer.cpp
src/SingleControl/: main.cpp
src/Skeleton/: openni_tracker.cpp
src/media/: 9_-_branching_and_machine_code.pptx
(+23 files in other folders)
